fixed answer component styling and spacing in mobile mode

--- a/frontend/src/Components/Answer/Answer.scss
+++ b/frontend/src/Components/Answer/Answer.scss
@@ -6,6 +6,7 @@
     &__input-container{
         position: relative;
         // border: 1px red solid;
+        margin-bottom: .5rem;
 
     }
 
@@ -17,11 +18,11 @@
         height: 1.5rem;
         margin: 0;
         text-align: center;
-        font-size: 16px;
+        font-size: 13px;
 
         &::placeholder{
             text-align: center;
-            font-size: 16px;
+            font-size: 13px;
             // padding: 41%;
         }
 
@@ -48,9 +49,9 @@
     }
 
     &__text{
-        font-size: 16px;
-        padding: .2rem 0;
-        margin: 0;
+        font-size: 13px;
+        padding: .1rem 0 .2rem;
+        margin: 0 0 0 .4rem;
         
         &--hidden{
             display: none;
