--- a/frontend/src/Components/ButtonPrimary/ButtonPrimary.scss
+++ b/frontend/src/Components/ButtonPrimary/ButtonPrimary.scss
@@ -21,7 +21,7 @@
         box-shadow: 0px 3px 6px rgba(13, 17, 30, 0.1);
 
         // box-shadow: 0px 2px 5px rgba(19, 24, 44, 0.1);
-        font-size: 12px;   
+        font-size: 13px;   
         padding: .2rem 1rem; 
         width: 100%;
 
