--- a/frontend/src/Components/Shuffle/Shuffle.scss
+++ b/frontend/src/Components/Shuffle/Shuffle.scss
@@ -1,3 +1,6 @@
 @use '../../Styles/Partials/variables' as *;
 @use '../../Styles/Partials/mixins' as*;
 
+.shuffle{
+    margin-top: .5rem;
+}
